# rpi_rt_siren

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  temperature_detector.cpp
cmake/: EnsureXNNPACK.cmake  xnnpack_try_compile.c
cockpit/: index.html
contrib/: demoday_temp_buzzer.sh  demoday_vision_buzzer.sh  demoday_vision_buzzer_latencytest.sh  demoday_vision_email.sh  full_mockery.sh  latency_report.txt  libcamera_latency.txt  process_latency.py  v4l_latency.txt
include/: alarm.hpp  detection_result.hpp  doxygen.hpp  frame.hpp  http_server.hpp  logic.hpp  sensor.hpp  thread_actor.hpp
src/: demo_capture.cpp  demo_shufflenet.cpp  demo_siren.cpp  demo_xnnpack.cpp  flame_iris.cpp
src/alarm/: brevo_email_alarm.cpp  buzzer.cpp  buzzer.h  buzzer_alarm.cpp  stdout_alarm.cpp
src/http_server/: http_server.cpp
src/logic/: shufflenet.cpp  temperature_threshold_logic.cpp  visual_classify_logic.cpp
src/logic/shufflenet/: branch1.hpp  branch2.hpp  chunk.hpp  conv2d.hpp  depthwise_conv2d.hpp  fc.hpp  frame.hpp  global_average_pool2d.hpp  inverted_residual.hpp  maxpool2d.hpp  model.hpp  preprocess.hpp  shuffle.hpp  xnn_common.hpp
src/misc/: jpeg_utils.cpp
src/sensor/: avwrap.hpp  breadpi_temperature_sensor.cpp  i2c.c  libcamera.cpp  mock_camera.cpp  mock_temperature_sensor.cpp  v4l2_camera.cpp  w1_temperature_sensor.cpp
testdata/: chunking_input  chunking_output  chunking_x2b1  chunking_x2b2  chunking_x2w0  chunking_x2w2  conv2d_output  conv2d_weight  demo_x1_output  demo_x1b0  demo_x1b1  demo_x1w0  demo_x1w1  demo_x2_input  demo_x2_output  demo_x2b1  demo_x2b2  demo_x2w1  demo_x2w2  depthwise_conv2d_output  depthwise_conv2d_weight  fc_bias  fc_output  fc_weight  fused_batchnorm_bias  fused_batchnorm_input  fused_batchnorm_output  fused_batchnorm_output_after_relu  fused_batchnorm_weight  maxpool_input  mean_input  mean_output  model_input  preprocess_output
testdata/model/: c1b  c1w  c5b  c5w  s2r0x2b1  s2r0x2b2  s2r0x2w1  s2r0x2w2  s2r1x2b0  s2r1x2w1  s2r2x2b0  s2r2x2b1  s2r2x2b2  s2r2x2w0  s2r2x2w1  s2r2x2w2  s2r3x2b0  s2r3x2b1  s2r3x2b2  s2r3x2w0  s2r3x2w1  s2r3x2w2  s2r4x2b0  s2r4x2b1  s2r4x2w0  s2r4x2w1  s2r5x2b2  s2r5x2w0  s2r5x2w1  s2r6x2b1  s2r6x2w0  s2r7x2b0  s2r7x2w0  s3r0x1b0  s3r0x1b1  s3r0x1w0  s3r0x1w1  s3r0x2b0  s3r0x2b1  s3r0x2b2  (+62 more)
tests/: CMakeLists.txt  test_shufflenet.cpp  test_system.cpp
webui/: index.html
wiki/: 1.-Setting-Up-Raspberry-Pi.md  2.-Quick-Start.md  3.-Alarming-Methods.md  4.-Camera-Sensors.md  5.-Temperature-Sensors.md  6.-SOLID-Principles.md  7.-Latency-Assessment.md
